objects/HealthCloudGA__EhrPatientCareProvider__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If returns true, the record will appear on Patient Card</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Organization255__c</fullName>
        <label>Organization 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Organization__c</fullName>
        <label>Organization</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>HealthCloudGA__EhrPatient__c</referenceTo>
        <relationshipLabel>Patient Care Providers</relationshipLabel>
        <relationshipName>PatientCareProviders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PractitionerName255__c</fullName>
        <label>Practitioner Name 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PractitionerName__c</fullName>
        <label>Practitioner Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Practitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practitioner</label>
        <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
        <relationshipLabel>Patient Care Providers</relationshipLabel>
        <relationshipName>PatientCareProviders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <description>An external identifier for the EHR Patient</description>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>EHR Patient Care Provider</label>
    <nameField>
        <displayFormat>Prov-{0}</displayFormat>
        <label>EHR Patient Care Provider ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Patient Care Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>